# miami-quack-82

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LLM.md  Makefile  README.md  miami-quack-82.code-workspace  run.sh
cmake/: gpl_to_ocs.cmake  prepare_game_palette_png.py  prepare_masked_png.py  prepare_palette.py  prepare_sprite_png.py  prepare_tileset_column.py
conf/: game.fs-uae  scroller.fs-uae  startup-sequence
res/: jehkoba32.gpl  jehkoba32_ecs.gpl
res/bullets/: bullet_flame.aseprite  bullet_small.aseprite
res/get_ready/: get_ready.gpl
res/palettes/: game.gpl  get_ready.gpl  lake.gpl  outdoor.gpl  title.gpl
res/player/: player.aseprite
res/tileset/: lake-generator.txt  lake.aseprite  lake.txt  world-1.aseprite
res/weapons/: weapon_flamethrower.aseprite  weapon_gun.aseprite  weapon_knife.aseprite  weapon_m16.aseprite  weapon_minigun.aseprite  weapon_shotgun.aseprite  weapon_sniper.aseprite  weapon_uzi.aseprite
src/: aim.c  aim.h  bullet.c  bullet.h  campaign.c  campaign.h  font.c  font.h  game.c  game.h  game_camera.c  game_camera.h  get_ready.c  get_ready.h  hud.c  hud.h  main.c  map.c  map.h  map_generator.c  map_generator.h  map_generator_lake.c  map_generator_outdoor.c  math_utils.h  player.c  player.h  player_anim.c  player_anim.h  player_dodge.c  player_dodge.h  player_input.c  player_input.h  player_physics.c  player_physics.h  scroller.c  scroller.h  title.c  title.h  weapon.c  weapon.h
toolchain/: m68k-bartman.cmake
